Polish. Align with 8.5.x/7.0.x